<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.inspect.EditActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/edit_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_edit"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="Title"
        app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/image_edit"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_appBarLayout"
        app:layout_constraintBottom_toTopOf="@id/label_edit_image_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_edit_image_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:focusableInTouchMode="true"
        android:hint="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_edit"
        app:layout_constraintBottom_toTopOf="@id/label_edit_image_description" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_image_title"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:inputType="textAutoComplete|textAutoCorrect"
            android:singleLine="true"
            android:textSize="14sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_edit_image_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:focusableInTouchMode="true"
        android:hint="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_edit_image_title"
        app:layout_constraintBottom_toTopOf="@id/button_cancel" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_image_description"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:inputType="textAutoCorrect"
            android:singleLine="false"
            android:textSize="14sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_delete"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/btnDelete"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_save"
        app:layout_constraintTop_toTopOf="@id/button_save"
        app:layout_constraintBottom_toBottomOf="@id/button_save" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/button_delete"
        app:layout_constraintEnd_toStartOf="@id/button_cancel"
        app:layout_constraintTop_toBottomOf="@id/label_edit_image_description"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/btnCancel"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_save"
        app:layout_constraintBottom_toBottomOf="@id/button_save" />


</androidx.constraintlayout.widget.ConstraintLayout>