<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018. This code has been developed by Fabio Ciravegna, The University of Sheffield. All rights reserved. No part of this code can be used without the explicit written permission by the author
  -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.shef.oak.com4510.view.trip.MapActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:scrollbars="vertical" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/starttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

            <TextView
                android:id="@+id/locationview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20pt"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_start_trip"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:text="@string/start" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_gallery"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:src="@drawable/ic_gallery_black_24dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:gravity="center"
                map:fabSize="normal" />

            <Button
                android:id="@+id/button_stop_trip"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:text="@string/stop" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20pt"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText_trip_title"
                android:layout_width="200dp"
                android:hint="@string/trip_title"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/button_saveTrip"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/btnSave" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>

